--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -285,7 +285,7 @@ body {
   }
 }
 .hero__inner {
-  max-width: 1173px;
+  max-width: 1233px;
   width: 100%;
   padding: 0 30px;
   margin: 0 auto;
@@ -315,7 +315,7 @@ body {
   color: #2d2d2d;
   margin-bottom: 22px;
 }
-@media only screen and (max-width: 1040px) {
+@media only screen and (max-width: 1218px) {
   .hero__title {
     font-size: 42px;
   }
@@ -436,6 +436,7 @@ body {
   position: absolute;
   right: 3px;
   transform: translateY(6%);
+  z-index: 50;
 }
 .hero__users {
   display: flex;
@@ -541,12 +542,12 @@ body {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
-@media only screen and (max-width: 1040px) {
+@media only screen and (max-width: 1218px) {
   .hero__carousel {
-    width: 410px;
+    width: 450px;
   }
 }
-@media only screen and (max-width: 1040px) {
+@media only screen and (max-width: 1218px) {
   .hero__carousel {
     width: 450px;
   }
@@ -735,9 +736,7 @@ body {
     left: 30%;
   }
   100% {
-    left: -28px;
-    -webkit-animation-delay: 3s;
-            animation-delay: 3s;
+    left: -10px;
     top: 5%;
   }
 }
@@ -746,9 +745,7 @@ body {
     left: 30%;
   }
   100% {
-    left: -28px;
-    -webkit-animation-delay: 3s;
-            animation-delay: 3s;
+    left: -10px;
     top: 5%;
   }
 }
@@ -815,7 +812,7 @@ body {
     right: 30%;
   }
   100% {
-    right: -35px;
+    right: -17px;
     top: 8%;
   }
 }
@@ -824,7 +821,7 @@ body {
     right: 30%;
   }
   100% {
-    right: -35px;
+    right: -17px;
     top: 8%;
   }
 }
@@ -922,6 +919,18 @@ body {
   100% {
     right: 35%;
     bottom: -15%;
+  }
+}
+@media only screen and (max-width: 574px) {
+  @-webkit-keyframes italy-bottom {
+    100% {
+      bottom: -20%;
+    }
+  }
+  @keyframes italy-bottom {
+    100% {
+      bottom: -20%;
+    }
   }
 }
 @media only screen and (max-width: 373px) {
